# pixel-sheriff

./: .env.example  .gitignore  Architecture.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_TASKS.md  Makefile  README.md  Roadplan.md  docker-compose.yml  porposed_folder_structure.md  project_tree.md
apps/api/: Dockerfile  Dockerfile.test  pyproject.toml
apps/api/src/sheriff_api/: config.py  demo_prelabel_seed.py  errors.py  main.py
apps/api/src/sheriff_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/sheriff_api/db/: models.py  session.py
apps/api/src/sheriff_api/ml/: __init__.py  model_factory.py  registry.py
apps/api/src/sheriff_api/routers/: annotations.py  assets.py  categories.py  datasets.py  deployments.py  experiments.py  exports.py  folders.py  health.py  models.py  prelabels.py  projects.py  sequences.py  tasks.py  video_imports.py
apps/api/src/sheriff_api/schemas/: annotations.py  assets.py  categories.py  common.py  datasets.py  deployments.py  experiments.py  exports.py  folders.py  model_config_schema.json  models.py  prelabels.py  projects.py  sequences.py  tasks.py  video_imports.py
apps/api/src/sheriff_api/schemas_json/: dataset_version_v2.schema.json
apps/api/src/sheriff_api/services/: annotation_payload.py  asset_ingest.py  augmentation.py  dataset_export_builder.py  dataset_store.py  (+22 more)
apps/api/tests/: conftest.py  test_api.py  test_cross_boundary_contracts.py  test_dataset_selection_service.py  test_experiments_api.py  test_migrations_sequences.py  test_model_store.py  test_multitask_api.py  test_prelabels_api.py  test_sequences_api.py  test_video_frames_service.py
apps/api/tests/ml/: test_backbone_metadata.py  test_contract_artifacts.py  test_model_factory.py  test_registry_json.py
apps/trainer/: Dockerfile  Dockerfile.base  pyproject.toml
apps/trainer/src/pixel_sheriff_trainer/: __init__.py  augmentation.py  export_onnx.py  jobs.py  main.py  pipeline.py  runner.py
apps/trainer/tests/: test_inference_app.py  test_inference_cache.py  test_inference_preprocess.py  test_trainer.py
(+354 files in other folders)
